Tue Sep  4 16:48:14 2001  Christopher Faylor <cgf@cygnus.com>

	* thread.cc (InterlockedExchangePointer): Don't define if it already
	exists.

Tue Sep  4 22:14:00 2001  Corinna Vinschen <corinna@vinschen.de>

	* uname.cc (uname): Eliminate os specific retrieving of x86
	processor type.

2001-09-04  Kazuhiro Fujieda  <fujieda@jaist.ac.jp>

        * fhandler_console.cc (fhandler_console::char_command): Save the cursor
	position relative to the top of the window.
	* fhandler_cc (fhandler_console::write): Ditto.

Mon Sep  3 21:06:00 2001  Corinna Vinschen <corinna@vinschen.de>

	* dir.cc (opendir): Write version information to __d_dirent->d_version.

Mon Sep  3 18:34:00 2001  Corinna Vinschen <corinna@vinschen.de>

	* cygwin.din: Add `dirfd'.
	* dir.cc (dirfd): New function.
	(opendir): Open a directory file descriptor and save it in
	__d_dirent->d_fd.
	(closedir): Close directory file descriptor.
	* include/cygwin/version.h: Bump API minor version to 44.

Sun Sep  2 22:09:31 2001  Christopher Faylor <cgf@cygnus.com>

	* child_info.h: Modify magic number.
	* dcrt0.cc (_cygwin_testing): Define.
	(_dll_crt0): Set _cygwin_testing if CYGWIN_TESTING environment variable
	exists.  Don't issue "conflicting versions" error if _cygwin_testing is
	true.
	* shared.cc (shared_name): Use _cygwin_testing global rather than
	testing the environment.
	* syscalls.cc (_write): Remove debugging info.

Sat Sep  1 01:37:13 2001  Christopher Faylor <cgf@cygnus.com>

	* tty.cc (tty::create_inuse): Eliminate unneeded argument.
	* tty.h: Reflect above change.
	* fhandler_tty.cc: Reflect argument reduction in tty::create_inuse,
	throughout.  Always make inuse inheritable.

Sat Sep  1 01:10:07 2001  Christopher Faylor <cgf@cygnus.com>

	* debug.cc (mark_closed): Rename from debug_mark_closed and make
	static.
	(setclexec_pid): New function for marking saved handle as
	close-on-exec.
	(delete_handle): New function.
	(debug_fixup_after_fork): New function.